[build-system]
requires = ["hatchling", "hatch-msgfmt-s-ball"]
build-backend = "hatchling.build"

[project]
name = "i18nparse"
dynamic = ["version"]
description = "Provides translations for argparse module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "s-ball", email = "s-ball@laposte.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Spanish",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Slovenian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Localization",
]

[project.urls]
Changelog = "https://github.com/s-ball/i18nparse/blob/master/CHANGES.txt"
Homepage = "https://github.com/s-ball/i18nparse"

[tool.hatch.version]
path = "i18nparse/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/i18nparse","/src","/CONTRIBUTING"
]

[tool.hatch.build.targets.wheel.hooks.msgfmt]
domain = "argparse"
messages = "src"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11"]
